--- a/index.html
+++ b/index.html
@@ -2,10 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfiles</title>
+    <style>
+        body{background-color: black;}
+        h2{color: red;}
+    </style>
 </head>
-<body>
-    
+<body background="img/fondo.jpeg">
+    <table>
+    <th> 
+        <tr><h2><a href="JoseMiguelPortilloPerez.html">Jose Miguel Portillo Peréz</a></h2> </tr>
+    </th> 
+    <th><h2><a href="KarenEstephanie.html">Karen Estephanie Peréz Ovando</a></h2></th>
+</table>
 </body>
 </html>
