CORRECCIONES EN LA PAGINA DE DIEGO

--- a/diegolopezcabrera.html
+++ b/diegolopezcabrera.html
@@ -12,7 +12,7 @@
         </style>
 </head>
 <body><center>
-    <h1>PAGINA PRIncipal de diego</h1>
+    <h1>PAGINA PRIGINA PRINCIPAL DE DIEGO</h1>
     <a href="index.html">regresar</a>
 
     <p>¿Qué es y para qué sirve el Facebook?</p>
