arrgeros de errrores

--- a/diegolopezcabrera.html
+++ b/diegolopezcabrera.html
@@ -12,10 +12,14 @@
         </style>
 </head>
 <body><center>
+    
+    background/imagen:url (https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvHTELQmyJcjTNInzfIR_erqBLg8BQcjQqoQ&s);
+    color: #ffffff;
+
     <h1>PAGINA PRIGINA PRINCIPAL DE DIEGO</h1>
     <a href="index.html">regresar</a>
 
-    <p>¿Qué es y para qué sirve el Facebook?</p>
+
 
       
 </body>
