--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         <tr><h2><a href="JoseMiguelPortilloPerez.html">Jose Miguel Portillo Peréz</a></h2> </tr>
     </th> 
     <th><h2><a href="KarenEstephanie.html">Karen Estephanie Peréz Ovando</a></h2></th>
+
+    <th>
+        <tr><h2><a href="diegolopezcabrera.html">Diego Lopez Cabrera</a></h2></th>
+    </th>
+    
 </table>
 </body>
 </html>
