--- a/JoseMiguelPortilloPerez.html
+++ b/JoseMiguelPortilloPerez.html
@@ -93,8 +93,9 @@
             </tbody>
         </table>
     </div>
-
-    <footer>
+    
+    <center><h1><a href="index.html">Regresar</a></h1></center>
+      <footer>
         <p>&copy; 2024 Los Mejores Teléfonos</p>
     </footer>
 </body>
