--- a/index.html
+++ b/index.html
@@ -6,16 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfiles</title>
     <style>
-        body{background-color: black;}
+        body{background-color: rgb(33, 33, 33);   text-align: center;}
         h2{color: red;}
+        h1{color: white;}
     </style>
 </head>
-<body background="img/fondo.jpeg">
-    <table>
-    <th> 
-        <tr><h2><a href="JoseMiguelPortilloPerez.html">Jose Miguel Portillo Peréz</a></h2> </tr>
-    </th> 
-    <th><h2><a href="KarenEstephanie.html">Karen Estephanie Peréz Ovando</a></h2></th>
-</table>
+<body>
+    <h1>PERFILES DEL EQUIPO</h1>
+    <hr>
+    <br>
+    <h2><a href="JoseMiguelPortilloPerez.html">Jose Miguel Portillo Peréz</a></h2>
+    <hr>
+    <br>
+    <h2><a href="KarenEstephanie.html">Karen Estephanie Peréz Ovando</a></h2>
+    <hr>
+    <br>
+    <h2><a href="diegolopezcabrera.html">Diego Lopéz Cabrera</a></H2>
+    <hr>
+    <br>
+    <h2><a href="oscarcamacho.html">Oscar Daniel Camacho Melgar</a></h2>
+    <hr>
+    <br>
 </body>
 </html>
