--- a/diegolopezcabrera.html
+++ b/diegolopezcabrera.html
@@ -25,7 +25,7 @@
 <body>
     <center>
         <h1>PAGINA PRINCIPAL DE DIEGO</h1>
-        <a href="index.html">Regresar</a>
+        <h1><a href="index.html">Regresar</a></h1>
     </center>
 </body>
 </html>
