--- a/oscarcamacho.html
+++ b/oscarcamacho.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oscar daniel</title>
+    <style>
+        body{text-align: center;
+            background-size: cover;
+            background-attachment: fixed;}
+        h1{color: white;}
+        h2{color:black;}
+    </style>
 </head>
-<body>
+<h1>OSCAR DANIEL CAMACHO MELGAR 5:J</h1>
+<br>
+<hr>
+<body background="img/fondo-digital.avif">
 <h1><center><a href="index.html">Regresar</a></center></h1>
+<hr>
 </body>
 </html>
