--- a/KarenEstephanie.html
+++ b/KarenEstephanie.html
@@ -6,6 +6,39 @@
     <title>Karen Estephanie</title>
 </head>
 <body>
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Las mejores redes sociales</title>
+ <style>
+        h1{color:red}
+        p{color:blue}
+        table{background-color: rgb(170, 238, 221);}
+</style>
+</head>
+<body>
+    <center><h1>Facebook</h1></center>
+    <table width="100%" style="color:black;">
+        <tr>
+            
+            <td>Historia</td>
+            <td>
+                <ul>
+                    <li>Nació como una red social universitaria y ahora, es una entidad que busca construir el metaverso. 
+                        Facebook fue lanzado el 4 de febrero de 2004 por Mark Zuckerberg, Eduardo Saverin, Dustin Moskovitz,
+                         Andrew McCollum y Chris Hughes, durante sus años en la Universidad de Harvard.</li>
+                    <li>Según informes del pasado año, la red social es la más popular y acumula más de 3.000 millones de usuarios 
+                        (por comparativa, la población mundial total es aproximadamente de 8.000 millones).</li>
+                </ul>
+            </td>
+            <td>
+                <img src="img/KXDKMUPMJQNB3KIF3NQ5WJ7Z2Q.jpg" width="400" height="200">
+            </td>
+        </tr>               
+    </table>
+</body>
+</html>
     <h1><center><a href="index.html">Regresar</a></center></h1>
 </body>
 </html>
